--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "pony-props": "^0.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "rsuite": "^5.16.6",
     "web-vitals": "^2.1.4"
