--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "firebase": "^9.9.4",
     "pony-props": "^0.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
