--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "chart.js": "^3.9.1",
+    "faker": "^5.5.3",
     "firebase": "^9.9.4",
     "pony-props": "^0.2.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
